[package]
name = "rtvox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.0"
bytemuck = "1.12.1"
png = "0.17.6"
quaternion = "0.4.1"
raw-window-handle = "0.5.0"
vecmath = "1.0.0"
vulkano = "0.30.0"
vulkano-shaders = "0.30.0"
vulkano-util = "0.30.0"
vulkano-win = "0.30.0"
winit = "0.26"
